--- a/Experiments/Shopping Cart/cart.html
+++ b/Experiments/Shopping Cart/cart.html
@@ -5,15 +5,18 @@
         <link rel="stylesheet" href="css/cart.css" type="text/css">
     </head>
     <body>
-        <div id="items">
-
-        </div>
+        <div id="siteHeader">Erik's Book Bazaar</div>
+        <div id="search"><input type="text" id="searchField"/><input class="searchBtn" id="searchBtn" type="button" value="Search"/></div>
+        <div id="items"></div>
         <div id="shoppingCart">
             <div id="cart">Cart</div>
             <ul id="cartList">
 
             </ul>
             <div id="total"></div>
+        </div>
+        <div id="searchContainer"><h2>Search Results:</h2>
+            <div id="searchResults"></div>
         </div>
     </body>
 </html>
