More calculation modifications. Mostly, draggability and fixes. Oh, and memory functions!

--- a/Experiments/calculator/calculator.html
+++ b/Experiments/calculator/calculator.html
@@ -4,8 +4,9 @@
 <head>
     <title>Calculator v0.1</title>
     <link rel="stylesheet" href="css/calculator.css" type="text/css"/>
-    <script type="text/javascript" src="js/calculator.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="js/calculator.js"></script>
 </head>
 <body>
     <div id="calcBody">
@@ -14,6 +15,10 @@
             <div id="displayOverflow"></div>
         </div>
         <div id="buttonDrawArea">
+            <a><div class="btn actionBtn" id="buttonMC"><span>MC</span></div></a>
+            <a><div class="btn actionBtn" id="buttonMA"><span>M+</span></div></a>
+            <a><div class="btn actionBtn" id="buttonMS"><span>M-</span></div></a>
+            <a><div class="btn actionBtn" id="buttonMR"><span>MR</span></div></a>
             <a><div class="btn actionBtn" id="buttonclear"><span>C</span></div></a>
             <a><div class="btn actionBtn" id="buttonmodulus"><span>%</span></div></a>
             <a><div class="btn actionBtn" id="buttondivide"><span>/</span></div></a>
