- Created jQuery plugin - Added hoverbox

--- a/Experiments/Highlight Items/index.html
+++ b/Experiments/Highlight Items/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="boot">
-        <div id="list1" class="list"></div>
+        <div id="list1" class="list" data-message="Foot"></div>
         <div id="list2" class="list"></div>
         <div id="list3" class="list"></div>
         <div id="list4" class="list"></div>
@@ -28,5 +28,7 @@
         <div id="part8" class="part"></div>
         <div id="part9" class="part"></div>
     </div>
+
+    <div id="hoverBox"></div>
 </body>
 </html>
