--- a/Experiments/Highlight Items/index.html
+++ b/Experiments/Highlight Items/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div id="boot">
-        <div id="list1" class="list" data-message="Foot"></div>
-        <div id="list2" class="list"></div>
-        <div id="list3" class="list"></div>
-        <div id="list4" class="list"></div>
-        <div id="list5" class="list"></div>
-        <div id="list6" class="list"></div>
-        <div id="list7" class="list"></div>
-        <div id="list8" class="list"></div>
-        <div id="list9" class="list"></div>
+        <div id="list1" class="list" data-message="Head"></div>
+        <div id="list2" class="list" data-message="Shoulders"></div>
+        <div id="list3" class="list" data-message="Knees"></div>
+        <div id="list4" class="list" data-message="And"></div>
+        <div id="list5" class="list" data-message="Toes"></div>
+        <div id="list6" class="list" data-message=","></div>
+        <div id="list7" class="list" data-message="Knees"></div>
+        <div id="list8" class="list" data-message="And"></div>
+        <div id="list9" class="list" data-message="Toes"></div>
         <div id="part1" class="part"></div>
         <div id="part2" class="part"></div>
         <div id="part3" class="part"></div>
