--- a/Experiments/calculator/calculator.html
+++ b/Experiments/calculator/calculator.html
@@ -4,6 +4,7 @@
 <head>
     <title>Calculator v0.1</title>
     <link rel="stylesheet" href="css/calculator.css" type="text/css"/>
+    <link rel="stylesheet" href="css/mobilecalc.css" type="text/css" media="only screen and (max-width:600"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/calculator.js"></script>
