--- a/Experiments/calculator/calculator.html
+++ b/Experiments/calculator/calculator.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <title>Calculator v0.1</title>
-    <link rel="stylesheet" href="css/calculator.css" type="text/css"/>
-    <link rel="stylesheet" href="css/mobilecalc.css" type="text/css" media="only screen and (max-width:600"/>
+    <link rel="stylesheet" href="css/calculator.css" type="text/css" media="screen and (min-width:601px)"/>
+    <link rel="stylesheet" href="css/mobilecalc.css" type="text/css" media="screen and (max-width:600px)"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/calculator.js"></script>
