--- a/Experiments/calculator/calculator.html
+++ b/Experiments/calculator/calculator.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Calculator v0.1</title>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
     <link rel="stylesheet" href="css/calculator.css" type="text/css" media="screen and (min-width:481px)"/>
     <link rel="stylesheet" href="css/mobilecalc.css" type="text/css" media="screen and (max-device-width:480px)"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
