- Renamed a few classes in Calculator - Launched MPC project, featuring soundJS. Basic CSS and positioning is done, will begin work on advanced CSS effects soon.

--- a/Experiments/calculator/calculator.html
+++ b/Experiments/calculator/calculator.html
@@ -13,32 +13,32 @@
 <body>
     <div id="calcBody">
         <div id="displayField">
-            <div id="displayArea"></div>
+            <div id="mainDisplay"></div>
             <div id="displayOverflow"></div>
         </div>
         <div id="buttonDrawArea">
-            <a><div class="btn actionBtn" id="buttonMC"><span>MC</span></div></a>
-            <a><div class="btn actionBtn" id="buttonMA"><span>M+</span></div></a>
-            <a><div class="btn actionBtn" id="buttonMS"><span>M-</span></div></a>
-            <a><div class="btn actionBtn" id="buttonMR"><span>MR</span></div></a>
-            <a><div class="btn actionBtn" id="buttonclear"><span>C</span></div></a>
-            <a><div class="btn actionBtn" id="buttonmodulus"><span>%</span></div></a>
-            <a><div class="btn actionBtn" id="buttondivide"><span>/</span></div></a>
-            <a><div class="btn actionBtn" id="buttonmultiply"><span>*</span></div></a>
-            <a><div class="btn numBtn" id="button1"><span>1</span></div></a>
-            <a><div class="btn numBtn" id="button2"><span>2</span></div></a>
-            <a><div class="btn numBtn" id="button3"><span>3</span></div></a>
-            <a><div class="btn actionBtn" id="buttonsubtract"><span>-</span></div></a>
-            <a><div class="btn numBtn" id="button4"><span>4</span></div></a>
-            <a><div class="btn numBtn" id="button5"><span>5</span></div></a>
-            <a><div class="btn numBtn" id="button6"><span>6</span></div></a>
-            <a><div class="btn actionBtn" id="buttonadd"><span>+</span></div></a>
-            <a><div class="btn numBtn" id="button7"><span>7</span></div></a>
-            <a><div class="btn numBtn" id="button8"><span>8</span></div></a>
-            <a><div class="btn numBtn" id="button9"><span>9</span></div></a>
-            <a><div class="btn actionBtn" id="buttonequals"><span>=</span></div></a>
-            <a><div class="btn numBtn" id="button0"><span>0</span></div></a>
-            <a><div class="btn numBtn" id="buttondecimal"><span>.</span></div></a>
+            <a><div class="btns actionBtn" id="buttonMC"><span>MC</span></div></a>
+            <a><div class="btns actionBtn" id="buttonMA"><span>M+</span></div></a>
+            <a><div class="btns actionBtn" id="buttonMS"><span>M-</span></div></a>
+            <a><div class="btns actionBtn" id="buttonMR"><span>MR</span></div></a>
+            <a><div class="btns actionBtn" id="buttonclear"><span>C</span></div></a>
+            <a><div class="btns actionBtn" id="buttonmodulus"><span>%</span></div></a>
+            <a><div class="btns actionBtn" id="buttondivide"><span>/</span></div></a>
+            <a><div class="btns actionBtn" id="buttonmultiply"><span>*</span></div></a>
+            <a><div class="btns numBtn" id="button1"><span>1</span></div></a>
+            <a><div class="btns numBtn" id="button2"><span>2</span></div></a>
+            <a><div class="btns numBtn" id="button3"><span>3</span></div></a>
+            <a><div class="btns actionBtn" id="buttonsubtract"><span>-</span></div></a>
+            <a><div class="btns numBtn" id="button4"><span>4</span></div></a>
+            <a><div class="btns numBtn" id="button5"><span>5</span></div></a>
+            <a><div class="btns numBtn" id="button6"><span>6</span></div></a>
+            <a><div class="btns actionBtn" id="buttonadd"><span>+</span></div></a>
+            <a><div class="btns numBtn" id="button7"><span>7</span></div></a>
+            <a><div class="btns numBtn" id="button8"><span>8</span></div></a>
+            <a><div class="btns numBtn" id="button9"><span>9</span></div></a>
+            <a><div class="btns actionBtn" id="buttonequals"><span>=</span></div></a>
+            <a><div class="btns numBtn" id="button0"><span>0</span></div></a>
+            <a><div class="btns numBtn" id="buttondecimal"><span>.</span></div></a>
         </div>
     </div>
 </body>
