--- a/Experiments/MPC/mpc.html
+++ b/Experiments/MPC/mpc.html
@@ -3,11 +3,11 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" href="css/robik.css"/>
+    <link rel="stylesheet" href="css/mpc.css"/>
     <script type="text/javascript" src="http://code.createjs.com/soundjs-0.3.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="js/robik.js"></script>
+    <script type="text/javascript" src="js/mpc.js"></script>
 </head>
 <body>
     <div id="wrapper">
