Proper event handling system in place. Final bit before it's done done is getting the attribute swap to work properly within Backbone's structure. Right now, stuff sets to true alright, but I haven't set the other options to false. Need to figure out how to access the other elements of a collection when changing a model's attribute

--- a/backbone/index.html
+++ b/backbone/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div id="mainApp">
-    <div id="headerText">
-      <span>Text chosen from dropdown form.</span>
+    <div id="headerBox">
+      <span id="headerText">Text chosen from dropdown form.</span>
     </div>
 
     <div class="selectContainer">
