Brought the styling closer to what was expected. As an exercise on learning backbone, I think this is complete.

--- a/backbone/index.html
+++ b/backbone/index.html
@@ -7,6 +7,7 @@
   <script src="dropdown.js"></script>
   <link rel="stylesheet" href="style.css"/>
   <title>Erik Moldovan's Dropdown</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
 <body>
   <div id="mainApp">
@@ -15,7 +16,12 @@
     </div>
 
     <div class="selectContainer">
-      <div id="currentOption">Pick one...</div>
+      <div id="currentOptCon">
+        <div id="currentOption">Select one...</div>
+        <div id="caret">
+          <div>▼</div>
+        </div>
+      </div>
       <ul id="selectList">
 
       </ul>
